# cargo-goosectl

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
actions/cargo-goosectl/: README.md  action.yml
actions/current-version/: README.md  action.yml
schemas/: goose.schema.json
src/: lib.rs  main.rs  metadata.rs
src/cli/: mod.rs
src/cli/commands/: bump.rs  current_version.rs
src/config/: language.rs  mod.rs
src/version/: mod.rs  semantic_version.rs  transition.rs
src/version/transition/: fsm.rs  mod.rs
