[package]
name = "cargo-goose"
description = "A strict, explicit SemVer CLI with first-class prerelease support."
version = "0.4.0-beta.1"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/mozilla-ai/cargo-goose"

[[bin]]
name = "cargo-goose"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
toml_edit = { version = "0.24.0", features = ["serde"] }

[dependencies.clap]
version = "4.5.54"
features = ["derive"]
